correction 2 for css

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" href="./views/styles/mainstyle.css">
+        <link rel="stylesheet" href="/views/styles/mainstyle.css">
     </head>
     <body>
         <main class="main">
