--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,106 +1,99 @@
-<html>
-    <head>
-        <link rel="stylesheet" href="/mainstyle.scss">
-    </head>
-    <body>
-        <div class="container">
-            <input id="menu__toggle" type="checkbox" />
-            <label class="menu__btn" for="menu__toggle">
-              <span></span>
-            </label>
-            <nav class="sidebar">
-              <header>
-                <div class="image-text">
-                  <span class="image">
-                    <img src="https://blogger.googleusercontent.com/img/a/AVvXsEgjA6FdqLFps5zaTKQjQJaEThc8nqqk-qq8BTrxjoc1a2DWIJ2wb-eTf1R4hYRwC4UDqdR2kOish2vKcemBjYQEh0waLfZ4wcteJvy0TISrdbPWZm8udx730Ow7nj-oU_-7ZJGQSWWU8iAa_FG3BZ02BK1gpXYzmxj-s42fk4D0WrooBR6bypV9ImrSOg=s800" alt="">
-                  </span>
-          
-                  <div class="text logo-text">
-                    <span class="name">Codinglab</span>
-                    <span class="profession">Web developer</span>
-                  </div>
-                </div>
-          
-                <i class='bx bx-chevron-right toggle'></i>
-              </header>
-          
-              <div class="menu-bar">
-                <div class="menu">
-          
-                  <li class="search-box">
-                    <i class='bx bx-search icon'></i>
-                    <input type="text" placeholder="Search...">
-                  </li>
-          
-                  <ul class="menu-links">
-                    <li class="nav-link">
-                      <a href="#">
-                        <i class='bx bx-home-alt icon'></i>
-                        <span class="text nav-text">Dashboard</span>
-                      </a>
-                    </li>
-          
-                    <li class="nav-link">
-                      <a href="#">
-                        <i class='bx bx-bar-chart-alt-2 icon'></i>
-                        <span class="text nav-text">Revenue</span>
-                      </a>
-                    </li>
-          
-                    <li class="nav-link">
-                      <a href="#">
-                        <i class='bx bx-bell icon'></i>
-                        <span class="text nav-text">Notifications</span>
-                      </a>
-                    </li>
-          
-                    <li class="nav-link">
-                      <a href="#">
-                        <i class='bx bx-pie-chart-alt icon'></i>
-                        <span class="text nav-text">Analytics</span>
-                      </a>
-                    </li>
-          
-                    <li class="nav-link">
-                      <a href="#">
-                        <i class='bx bx-wallet icon'></i>
-                        <span class="text nav-text">Wallets</span>
-                      </a>
-                    </li>
-          
-                  </ul>
-                </div>
-          
-                <div class="bottom-content">
-                  <li class="">
-                    <a href="#">
-                      <i class='bx bx-log-out icon'></i>
-                      <span class="text nav-text">Logout</span>
-                    </a>
-                  </li>
-          
-                  <li class="mode">
-                    <div class="sun-moon">
-                      <i class='bx bx-moon icon moon'></i>
-                      <i class='bx bx-sun icon sun'></i>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Dashboard</title>
+
+    <!-- Mes styles-->
+    <link rel="stylesheet" href="mainstyle.css">
+</head>
+
+<body>
+
+    <!-- My Side Barre -->
+    <div class="sideBarre">
+        <div class="sideBarre__logo">
+            <div class="sideBarre__cercle">
+
+            </div>
+            <h1>serein</h1>
+        </div>
+        <div class="sideBarre__menu">
+            <ul>
+                <li><a href="#">Dashbord</a></li>
+                <li><a href="#">Widgets</a></li>
+                <li><a href="#">UI Elements</a></li>
+                <li><a href="#">Advanced UI</a></li>
+                <li><a href="#">Form Elements</a></li>
+                <li><a href="#">Editors</a></li>
+                <li><a href="#">Charts</a></li>
+                <li><a href="#">Tables</a></li>
+                <li><a href="#">Popups</a></li>
+                <li><a href="#">Notifications</a></li>
+                <li><a href="#">Icons</a></li>
+                <li><a href="#">Maps</a></li>
+                <li><a href="#">User Pages</a></li>
+                <li><a href="#">Error Pages</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- My Main Content -->
+    <div class="mainContent">
+        <nav>
+            <div class="user">
+
+            </div>
+        </nav>
+
+        <!-- My Box Content -->
+        <div class="boxContent">
+            <div class="firstRow">
+                <div class="cardOne">
+                    <div class="description">
+                        <p>Total invoices</p>
+                        <h3>98765</h3>
                     </div>
-                    <span class="mode-text text">Dark mode</span>
-          
-                    <div class="toggle-switch">
-                      <span class="switch"></span>
-                    </div>
-                  </li>
-          
                 </div>
-              </div>
-          
-            </nav>
-          
-            <section class="home">
-              <div class="text">Dashboard Sidebar</div>
-            </section>  
-          </div>
-          
-    </body>
+                <div class="cardTwo">
+                    <div class="description">
+                        <p>Total invoices</p>
+                        <h3>98765</h3>
+                    </div>
+                </div>
+                <div class="cardThree">
+                    <div class="description">
+                        <p>Total invoices</p>
+                        <h3>98765</h3>
+                    </div>
+                </div>
+                <div class="cardFour">
+                    <div class="description">
+                        <p>Total invoices</p>
+                        <h3>98765</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="secondRow">
+                <div class="cardChart">
+
+                </div>
+                <div class="cardChart">
+
+                </div>
+                <div class="cardChart">
+
+                </div>
+            </div>
+            <div class="thirdRow">
+
+            </div>
+        </div>
+    </div>
+
+</body>
 
 </html>
