--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -19,24 +19,16 @@
             <div class="sideBarre__cercle">
 
             </div>
-            <h1>serein</h1>
+            <h1>MedSched</h1>
         </div>
         <div class="sideBarre__menu">
             <ul>
-                <li><a href="#">Dashbord</a></li>
-                <li><a href="#">Widgets</a></li>
-                <li><a href="#">UI Elements</a></li>
-                <li><a href="#">Advanced UI</a></li>
-                <li><a href="#">Form Elements</a></li>
-                <li><a href="#">Editors</a></li>
-                <li><a href="#">Charts</a></li>
-                <li><a href="#">Tables</a></li>
-                <li><a href="#">Popups</a></li>
-                <li><a href="#">Notifications</a></li>
-                <li><a href="#">Icons</a></li>
-                <li><a href="#">Maps</a></li>
-                <li><a href="#">User Pages</a></li>
-                <li><a href="#">Error Pages</a></li>
+                <li><a href="#">Dashboard</a></li>
+                <li><a href="#">Schedule</a></li>
+                <li><a href="#">Run Tests</a></li>
+                <li><a href="#">View Calender</a></li>
+                <li><a href="#">MQTT Logs</a></li>
+                <li><a href="#">Settings</a></li>
             </ul>
         </div>
     </div>
