--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -24,7 +24,7 @@
         <div class="sideBarre__menu">
             <ul>
                 <li><a href="#">Dashboard</a></li>
-                <li><a href="#">Schedule</a></li>
+                <li><a href="/schedule">Schedule</a></li>
                 <li><a href="#">Run Tests</a></li>
                 <li><a href="#">View Calender</a></li>
                 <li><a href="#">MQTT Logs</a></li>
