added dashboard to /

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -23,7 +23,7 @@
         </div>
         <div class="sideBarre__menu">
             <ul>
-                <li><a href="#">Dashboard</a></li>
+                <li><a href="/">Dashboard</a></li>
                 <li><a href="/schedule">Schedule</a></li>
                 <li><a href="#">Run Tests</a></li>
                 <li><a href="#">View Calender</a></li>
