updates: changed to local host for development

--- a/views/pages/tests.ejs
+++ b/views/pages/tests.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Schedule</title>
+    <title>Tests</title>
 
     <!-- Mes styles-->
     <link rel="stylesheet" href="mainstyle.css">
@@ -14,12 +14,12 @@
 <body>
 
     <!-- My Side Barre -->
-    <%- include('sidebar') %>
+    <%- include('../sidebar') %>
 
     <!-- My Main Content -->
-    <%- include('userview') %>
+    <%- include('../userview') %>
         <!-- My Box Content -->
-        <%- include('content/content-schedule') %>
+        <%- include('../content/content-tests') %>
         
     </div>
 
