--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -14,76 +14,13 @@
 <body>
 
     <!-- My Side Barre -->
-    <div class="sideBarre">
-        <div class="sideBarre__logo">
-            <div class="sideBarre__cercle">
-
-            </div>
-            <h1>MedSched</h1>
-        </div>
-        <div class="sideBarre__menu">
-            <ul>
-                <li><a href="/">Dashboard</a></li>
-                <li><a href="/schedule">Schedule</a></li>
-                <li><a href="#">Run Tests</a></li>
-                <li><a href="#">View Calender</a></li>
-                <li><a href="#">MQTT Logs</a></li>
-                <li><a href="#">Settings</a></li>
-            </ul>
-        </div>
-    </div>
+    <%- include('sidebar') %>
 
     <!-- My Main Content -->
-    <div class="mainContent">
-        <nav>
-            <div class="user">
-
-            </div>
-        </nav>
-
+    <%- include('userview') %>
         <!-- My Box Content -->
-        <div class="boxContent">
-            <div class="firstRow">
-                <div class="cardOne">
-                    <div class="description">
-                        <p>Total invoices</p>
-                        <h3>98765</h3>
-                    </div>
-                </div>
-                <div class="cardTwo">
-                    <div class="description">
-                        <p>Total invoices</p>
-                        <h3>98765</h3>
-                    </div>
-                </div>
-                <div class="cardThree">
-                    <div class="description">
-                        <p>Total invoices</p>
-                        <h3>98765</h3>
-                    </div>
-                </div>
-                <div class="cardFour">
-                    <div class="description">
-                        <p>Total invoices</p>
-                        <h3>98765</h3>
-                    </div>
-                </div>
-            </div>
-            <div class="secondRow">
-                <div class="cardChart">
-
-                </div>
-                <div class="cardChart">
-
-                </div>
-                <div class="cardChart">
-
-                </div>
-            </div>
-            <div class="thirdRow">
-
-            </div>
-        </div>
+        <%- include('content/content-dashboard') %>
+        
     </div>
 
 </body>
