--- a/views/pages/calendar.ejs
+++ b/views/pages/calendar.ejs
@@ -19,7 +19,7 @@
     <!-- My Main Content -->
     <%- include('userview') %>
         <!-- My Box Content -->
-        <%- include('content/content-schedule') %>
+        <%- include('../content/content-calender') %>
         
     </div>
 
