--- a/views/pages/settings.ejs
+++ b/views/pages/settings.ejs
@@ -9,6 +9,9 @@
 
     <!-- Mes styles-->
     <link rel="stylesheet" href="mainstyle.css">
+    <link rel="stylesheet" href="settings.css">
+    <!-- CSS only -->
+    
 </head>
 
 <body>
@@ -19,7 +22,7 @@
     <!-- My Main Content -->
     <%- include('userview') %>
         <!-- My Box Content -->
-        <%- include('content/content-settings') %>
+        <%- include('../content/content-settings') %>
         
     </div>
 
