--- a/views/pages/tests.ejs
+++ b/views/pages/tests.ejs
@@ -14,10 +14,10 @@
 <body>
 
     <!-- My Side Barre -->
-    <%- include('../sidebar') %>
+    <%- include('sidebar') %>
 
     <!-- My Main Content -->
-    <%- include('../userview') %>
+    <%- include('userview') %>
         <!-- My Box Content -->
         <%- include('../content/content-tests') %>
         
