--- a/views/content/content-schedule.ejs
+++ b/views/content/content-schedule.ejs
@@ -1,42 +1,32 @@
 <div class="boxContent">
-    <div class="firstRow">
-        <div class="cardOne">
-            <div class="description">
-                <p>Schedule Page</p>
-                <h3>98765</h3>
-            </div>
+    <form>
+        <div class="form-group">
+          <label for="schedulername">Scheduler Name</label>
+          <input type="text" class="form-control" id="schedulername" aria-describedby="emailHelp" placeholder="Enter email">
+          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
         </div>
-        <div class="cardTwo">
-            <div class="description">
-                <p>Total invoices</p>
-                <h3>98765</h3>
-            </div>
+        <div class="form-group">
+            <label for="exampleInputEmail1">Pill Name</label>
+            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
         </div>
-        <div class="cardThree">
-            <div class="description">
-                <p>Total invoices</p>
-                <h3>98765</h3>
-            </div>
-        </div>
-        <div class="cardFour">
-            <div class="description">
-                <p>Total invoices</p>
-                <h3>98765</h3>
-            </div>
-        </div>
-    </div>
-    <div class="secondRow">
-        <div class="cardChart">
-
-        </div>
-        <div class="cardChart">
-
-        </div>
-        <div class="cardChart">
-
-        </div>
-    </div>
-    <div class="thirdRow">
-
-    </div>
+        <div class="form-group">
+            <label for="dateRange">Date Time Picker</label>
+            <input type="text" name="datetimes" />
+          </div>
+        
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+    
+    <script>
+    $(function() {
+    $('input[name="datetimes"]').daterangepicker({
+        timePicker: true,
+        startDate: moment().startOf('hour'),
+        endDate: moment().startOf('hour').add(32, 'hour'),
+        locale: {
+        format: 'M/DD hh:mm A'
+        }
+    });
+    });
+    </script>
 </div>
