--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Schedule</title>
+    <title>Dashboard</title>
 
     <!-- Mes styles-->
     <link rel="stylesheet" href="mainstyle.css">
@@ -19,7 +19,7 @@
     <!-- My Main Content -->
     <%- include('userview') %>
         <!-- My Box Content -->
-        <%- include('content/content-calender') %>
+        <%- include('../content/content-dashboard') %>
         
     </div>
 
