added scheduling tab-tested

--- a/views/pages/sidebar.ejs
+++ b/views/pages/sidebar.ejs
@@ -10,7 +10,7 @@
             <li><a href="/">Dashboard</a></li>
             <li><a href="/schedule">Schedule</a></li>
             <li><a href="/tests">Run Tests</a></li>
-            <li><a href="/calendar">View Calender</a></li>
+            <li><a href="/calendar">View Schedules</a></li>
             <li><a href="/mqtt">MQTT Logs</a></li>
             <li><a href="/settings">Settings</a></li>
         </ul>
