--- a/views/content/content-schedule.ejs
+++ b/views/content/content-schedule.ejs
@@ -1,32 +1,26 @@
 <div class="boxContent">
-    <form>
+    <form action="/writeSchedule" method="post">
         <div class="form-group">
-          <label for="schedulername">Scheduler Name</label>
-          <input type="text" class="form-control" id="schedulername" aria-describedby="emailHelp" placeholder="Enter email">
-          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+          <div class = "form-group">
+            <label for="Pill Name">Pill Name:</label>
+            <input type="text" class="form-control" id="pillname" placeholder="Enter Pill Name" name="pillname" >
         </div>
-        <div class="form-group">
-            <label for="exampleInputEmail1">Pill Name</label>
-            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+        <div class = "form-group">
+            <label for="Pill Name">Pill Description:</label>
+            <input type="text" class="form-control" id="pilldesc" placeholder="Enter Pill Desc" name="pilldesc" >
         </div>
-        <div class="form-group">
-            <label for="dateRange">Date Time Picker</label>
-            <input type="text" name="datetimes" />
-          </div>
-        
+        <div class = "form-group">
+            <label for="state">Date:</label>
+            <input type="date" class="form-control" id="scheddate" placeholder="Enter Date" name="scheddate" >
+        </div>
+       
+        <div class = "form-group">
+            <label for="state">Time:</label>
+            <input type="time" class="form-control" id="schedtime" placeholder="Enter Time" name="schedtime" >
+        </div>
+    
+        <label for="repeat">Repeat for 7 Days</label><input type="checkbox" id="repeat" name="repeat" value="true"><br>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
     
-    <script>
-    $(function() {
-    $('input[name="datetimes"]').daterangepicker({
-        timePicker: true,
-        startDate: moment().startOf('hour'),
-        endDate: moment().startOf('hour').add(32, 'hour'),
-        locale: {
-        format: 'M/DD hh:mm A'
-        }
-    });
-    });
-    </script>
 </div>
