corrected setter route, added table scheduling

--- a/views/content/content-calender.ejs
+++ b/views/content/content-calender.ejs
@@ -1,42 +1,22 @@
 <div class="boxContent">
-    <div class="firstRow">
-        <div class="cardOne">
-            <div class="description">
-                <p>Calender</p>
-                <h3>98765</h3>
-            </div>
-        </div>
-        <div class="cardTwo">
-            <div class="description">
-                <p>Total invoices</p>
-                <h3>98765</h3>
-            </div>
-        </div>
-        <div class="cardThree">
-            <div class="description">
-                <p>Total invoices</p>
-                <h3>98765</h3>
-            </div>
-        </div>
-        <div class="cardFour">
-            <div class="description">
-                <p>Total invoices</p>
-                <h3>98765</h3>
-            </div>
-        </div>
-    </div>
-    <div class="secondRow">
-        <div class="cardChart">
+    <div class="container">
+        <a href="/add" class="btn btn-primary btn-sm">Add Data</a>
+        <br>
+        <br>
 
-        </div>
-        <div class="cardChart">
-
-        </div>
-        <div class="cardChart">
-
-        </div>
-    </div>
-    <div class="thirdRow">
-
+        <table class="table table-dark">
+            <thead class="thead-dark">
+                <th>ID</th>
+                <th>Patient Name</th>
+                <th>Care Taker Name</th>
+                <th>Pill Name</th>
+                <th>Care Taker Number</th>
+                <th>Schedule Date</th>
+                <th>Schedule Time</th>
+                <th>Schedule Status</th>
+                <th>Action</th>
+            </thead>
+          
+        </table>
     </div>
 </div>
